--- a/Assignment 11/index.html
+++ b/Assignment 11/index.html
@@ -1,55 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Grid Layout Example</title>
-  <style>
-    .container {
-      display: grid;
-      grid-template-columns: 40% 60%; /* First column takes 40%, second takes 60% */
-      grid-auto-rows: minmax(100px, auto); /* Auto-sizing the row height */
-      gap: 10px; /* Space between containers */
-    }
-
-    .item {
-      background-color: green;
-      color: white;
-      padding: 20px;
-      font-size: 18px;
-      text-align: center;
-    }
-
-    .first {
-      grid-column: 1; /* Span the first column */
-    }
-
-    .sec {
-      grid-column: 2; /* Span the second column */
-    }
-
-    .large {
-      grid-column: span 2; /* Spans across both columns */
-      background-color: purple;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Assignment 11</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <div class="item first">Design</div>
-    <div class="item first">JavaScript</div>
-    <div class="item first">Layout</div>
-    <div class="item sec">Ruby</div>
-    <div class="item">CSS</div>
-    <div class="item large">Web Dev</div>
-    <div class="item sec">PHP</div>
-    <div class="item">HTML</div>
-    <div class="item">Rust</div>
-    <div class="item large">Motion</div>
-    <div class="item">After Effects</div>
-    <div class="item">Maya</div>
-    <div class="item">Cinema 4D</div>
-    <div class="item">Nuke</div>
-  </div>
+
+    <div class="container">
+        <div class="photoshop">Photoshop</div>
+        <div class="invision">InVision</div>
+        <div class="ux">UX</div>
+        <div class="design">Design</div>
+        <div class="javascript">JavaScript</div>
+        <div class="layout">Layout</div>
+        <div class="ruby">Ruby</div>
+        <div class="go">Go</div>
+        <div class="css">CSS</div>
+        <div class="webdev">Web Dev</div>
+        <div class="php">PHP</div>
+        <div class="html">HTML</div>
+        <div class="rust">Rust</div>
+        <div class="motion">Motion</div>
+        <div class="maya">Maya</div>
+        <div class="nuke">Nuke</div>
+        <div class="cinema4d">Cinema 4D</div>
+        <div class="aftereffects">After Effects</div>
+    </div>
+
 </body>
 </html>
