--- a/Assignment 13/index.html
+++ b/Assignment 13/index.html
@@ -27,25 +27,62 @@
     <div class="main-container">
         <div class="dash-board">
             <div class="board">
-                <div class="item dash"><img src="src/dashboard.png"><p>dashboard</p></div>
-                <div class="item-2">
-                    <div class="items"><img src="src/announce.PNG" id="img"><p>News Feed</p></div>
-                    <div class="item"><img src="src/icon9.png"><p>Inbox</p><div id="msg">11</div></div>
+                <div class="item dash">
+                    <img src="src/dashboard.png">
+                    <a href="#">dashboard</a>
                 </div>
-                <div class="item"><img src="src/tasks.png"><p>Tasks</p><div id="task">19</div></div>
+                <div class="item-2">
+                    <div class="items">
+                        <img src="src/announce.PNG" id="img">
+                        <a href="#">News Feed</a>
+                    </div>
+                    <div class="item">
+                        <img src="src/icon9.png">
+                        <a href="#">Inbox</a>
+                        <div id="msg">11</div>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="src/tasks.png">
+                    <a href="#">Tasks</a>
+                    <div id="task">19</div>
+                </div>
             </div> 
             <div class="item-3">
-                <div class="item"><img src="src/b.jpg"><p>Buttons</p></div>
-                <div class="item"><img src="src/typography.png">Typography</div>
-                <div class="item"><img src="src/forms.png">Forms</div>
-                <div class="item"><img src="src/tables.png">Tables</div>
-                <div class="item"><img src="src/charts.png">Charts</div>
+                <div class="item">
+                    <img src="src/b.jpg">
+                    <a href="#">Buttons</a>
+                </div>
+                <div class="item">
+                    <img src="src/typography.png">
+                    <a href="#">Typography</a>
+                </div>
+                <div class="item">
+                    <img src="src/forms.png">
+                    <a href="#">Forms</a>
+                </div>
+                <div class="item">
+                    <img src="src/tables.png">
+                    <a href="#">Tables</a>
+                </div>
+                <div class="item">
+                    <img src="src/charts.png">
+                    <a href="#">Charts</a>
+                </div>
             </div>
             <div class="item4">
-                <div class="item"><img src="src/more pages.jpg">More Pages <div class="arow"><i class="fa-solid fa-caret-down"></i></div></div>
-                <div class="item"><img src="src/logout.png">LogOut</div>
+                <div class="item">
+                    <img src="src/more pages.jpg">
+                    <a href="#">More Pages</a>
+                    <div class="arow"><i class="fa-solid fa-caret-down"></i></div>
+                </div>
+                <div class="item">
+                    <img src="src/logout.png">
+                    <a href="#">LogOut</a>
+                </div>
             </div>
-        </div> <!-- Closing the dash-board div -->
+        </div>
+        
         
         <div class="right-container">
             <div class="content">
