--- a/Assignment 13/index.html
+++ b/Assignment 13/index.html
@@ -203,6 +203,27 @@
                                     <td>1.8</td>
                                     <td>A</td>
                                 </tr>
+                                <tr>
+                                    <td>Gecko</td>
+                                    <td>Netscape Browser 8</td>
+                                    <td>Win 98SE+</td>
+                                    <td>1.7</td>
+                                    <td>A</td>
+                                </tr>
+                                <tr>
+                                    <td>Gecko</td>
+                                    <td>Netscape Navigator 9</td>
+                                    <td>Win 98+ / OSX.2+</td>
+                                    <td>1.8</td>
+                                    <td>A</td>
+                                </tr>
+                                <tr>
+                                    <td>Gecko</td>
+                                    <td>Mozilla 1.0</td>
+                                    <td>Win 95+ / OSX.1+</td>
+                                    <td>1.7</td>
+                                    <td>A</td>
+                                </tr>
                             </tbody>
                             <tfoot>
                                 <tr>
